Fix navbar on mobile devices

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.Header.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.Header.less
@@ -69,7 +69,7 @@ a.main_logo_href + .tooltip {
         display: none !important;
     }
 
-    @media screen and (min-width: 501px) and (max-width: 1219px) {
+    @media screen and (min-width: 521px) and (max-width: 1219px) {
         display: none !important;
     }
 }
@@ -161,7 +161,7 @@ a.main_logo_href + .tooltip {
         display: inline-block;
     }
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 520px) {
         display: none;
     }
 }
